--- a/osi_payment_method/views/account_invoice_views.xml
+++ b/osi_payment_method/views/account_invoice_views.xml
@@ -6,10 +6,10 @@
     <record id="invoice_supplier_tree_payment_method" model="ir.ui.view">
         <field name="name">invoice.supplier.tree.payment.method</field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_supplier_tree"/>
+        <field name="inherit_id" ref="account.invoice_supplier_tree" />
         <field name="arch" type="xml">
             <xpath expr="//tree/field[@name='origin']" position="after">
-                <field name="payment_method"/>
+                <field name="payment_method" />
             </xpath>
         </field>
     </record>
@@ -17,11 +17,10 @@
     <record id="invoice_form_payment_method" model="ir.ui.view">
         <field name="name">invoice.form.payment.method</field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_form"/>
+        <field name="inherit_id" ref="account.invoice_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='payment_term_id']"
-                   position="after">
-                <field name="payment_method" widget="selection"/>
+            <xpath expr="//field[@name='payment_term_id']" position="after">
+                <field name="payment_method" widget="selection" />
             </xpath>
         </field>
     </record>
@@ -29,13 +28,16 @@
     <record id="invoice_form_payment_method_editable" model="ir.ui.view">
         <field name="name">invoice.form.payment.method.editable</field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id"
-               ref="osi_payment_method.invoice_form_payment_method"/>
-        <field name="groups_id"
-               eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"/>
+        <field
+            name="inherit_id"
+            ref="osi_payment_method.invoice_form_payment_method"
+        />
+        <field
+            name="groups_id"
+            eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"
+        />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='payment_method']"
-                   position="attributes">
+            <xpath expr="//field[@name='payment_method']" position="attributes">
                 <attribute name="readonly">False</attribute>
             </xpath>
         </field>
@@ -44,26 +46,31 @@
     <record id="invoice_supplier_form_payment_method" model="ir.ui.view">
         <field name="name">invoice.supplier.form.payment.method</field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_supplier_form"/>
+        <field name="inherit_id" ref="account.invoice_supplier_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='date_due']" position="after">
-                <field name="payment_method" widget="selection"/>
+                <field name="payment_method" widget="selection" />
             </xpath>
         </field>
     </record>
 
-    <record id="invoice_supplier_form_payment_method_editable"
-            model="ir.ui.view">
+    <record
+        id="invoice_supplier_form_payment_method_editable"
+        model="ir.ui.view"
+    >
         <field name="name">invoice.supplier.form.payment.method.editable
         </field>
         <field name="model">account.invoice</field>
-        <field name="inherit_id"
-               ref="osi_payment_method.invoice_supplier_form_payment_method"/>
-        <field name="groups_id"
-               eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"/>
+        <field
+            name="inherit_id"
+            ref="osi_payment_method.invoice_supplier_form_payment_method"
+        />
+        <field
+            name="groups_id"
+            eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"
+        />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='payment_method']"
-                   position="attributes">
+            <xpath expr="//field[@name='payment_method']" position="attributes">
                 <attribute name="readonly">False</attribute>
             </xpath>
         </field>
