--- a/osi_analytic_segments_stock_scrap/views/reason_code_view.xml
+++ b/osi_analytic_segments_stock_scrap/views/reason_code_view.xml
@@ -5,8 +5,8 @@
     <!-- Reason Code Type -->
     <record id="view_reason_code_form_analytic" model="ir.ui.view">
         <field name="name">reason.code.form</field>
-        <field name="model">reason.code</field>
-        <field name="inherit_id" ref="osi_scrap_reason_code.view_reason_code_form"/>
+        <field name="model">scrap.reason.code</field>
+        <field name="inherit_id" ref="scrap_reason_code.view_scrap_reason_code_form"/>
         <field name="arch" type="xml">
             <xpath expr="//form/group[3]" position="after">
                 <group>
