--- a/helpdesk_fieldservice/wizard/fsm_order_close_wizard.xml
+++ b/helpdesk_fieldservice/wizard/fsm_order_close_wizard.xml
@@ -1,46 +1,46 @@
-<!-- Copyright (C) 2019 Pavlov Media
+<!-- Copyright (C) 2021 Pavlov Media
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
     <record id="fsm_order_close_wizard_view_form" model="ir.ui.view">
-      <field name="name">fsm.order.close.wizard.form</field>
-      <field name="model">fsm.order.close.wizard</field>
-      <field name="arch" type="xml">
-          <form>
-              <div>
-                  There is an open Ticket, would you like to update the related ticket?
+        <field name="name">fsm.order.close.wizard.form</field>
+        <field name="model">fsm.order.close.wizard</field>
+        <field name="arch" type="xml">
+            <form>
+                <div
+                >There is an open Ticket, would you like to update the related ticket?
               </div>
-              <group>
-                  <field name="team_id" invisible="1" />
-                  <field name="ticket_id" invisible="1" />
-                  <field
-                        name="stage_id"
-                        string="Ticket Stage"
-                        required="1"
+                <group>
+                    <field invisible="1" name="team_id" />
+                    <field invisible="1" name="ticket_id" />
+                    <field
                         domain="[('team_ids', '=', team_id)]"
+                        name="stage_id"
                         options="{'no_create': True, 'no_open': True, 'no_create_edit': True}"
-                    />
-              </group>
-              <group>
-                  <field
-                        name="resolution"
-                        string="Ticket Resolution"
                         required="1"
+                        string="Ticket Stage"
                     />
-              </group>
-              <footer>
-                  <button
-                        string="Close Ticket"
-                        name="action_close_ticket"
-                        type="object"
+                </group>
+                <group>
+                    <field
+                        name="resolution"
+                        required="1"
+                        string="Ticket Resolution"
+                    />
+                </group>
+                <footer>
+                    <button
                         class="oe_highlight"
+                        name="action_close_ticket"
+                        string="Close Ticket"
+                        type="object"
                     />
-                  <button
-                        string="Cancel"
+                    <button
                         class="btn-default"
                         special="cancel"
+                        string="Cancel"
                     />
-              </footer>
-          </form>
+                </footer>
+            </form>
         </field>
     </record>
 </odoo>
