--- a/helpdesk_operating_unit/views/helpdesk_ticket.xml
+++ b/helpdesk_operating_unit/views/helpdesk_ticket.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <!-- Copyright (C) 2019 Open Source Integrators
     Copyright (C) 2019 Serpent Consulting Services
@@ -7,10 +7,10 @@
     <record id="view_helpdesk_ticket_view_form_inherit" model="ir.ui.view">
         <field name="name">helpdesk.ticket.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
+        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form" />
         <field name="arch" type="xml">
             <field name="user_id" position="after">
-                <field name="operating_unit_id"/>
+                <field name="operating_unit_id" />
             </field>
         </field>
     </record>
@@ -18,12 +18,16 @@
     <record id="helpdesk_ticket_group_by_ou" model="ir.ui.view">
         <field name="name">helpdesk.ticket.group.by.ou</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_search"/>
+        <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_search" />
         <field name="arch" type="xml">
             <filter name="stage" position="after">
-                <filter string="Operating Unit" name="operating_unit_grouped"
-                        domain="[]" context="{'group_by':'operating_unit_id'}"
-                        groups="operating_unit.group_multi_operating_unit"/>
+                <filter
+                    string="Operating Unit"
+                    name="operating_unit_grouped"
+                    domain="[]"
+                    context="{'group_by':'operating_unit_id'}"
+                    groups="operating_unit.group_multi_operating_unit"
+                />
             </filter>
         </field>
     </record>
