--- a/fieldservice_helpdesk_stock/views/helpdesk_views.xml
+++ b/fieldservice_helpdesk_stock/views/helpdesk_views.xml
@@ -6,7 +6,10 @@
     <record id="helpdesk_ticket_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id" ref="helpdesk_stock.view_helpdesk_ticket_form_inherit_stock"/>
+        <field
+            name="inherit_id"
+            ref="helpdesk_stock.view_helpdesk_ticket_form_inherit_stock"
+        />
         <field name="arch" type="xml">
             <field name="inventory_location_id" position="attributes">
                 <attribute name="readonly">True</attribute>
@@ -14,22 +17,28 @@
         </field>
     </record>
 
-    <menuitem id="menu_helpdesk_location"
-              name="Locations"
-              action="fieldservice.action_fsm_location"
-              parent="helpdesk_stock.menu_helpdesk_data"
-              sequence="60"/>
+    <menuitem
+        id="menu_helpdesk_location"
+        name="Locations"
+        action="fieldservice.action_fsm_location"
+        parent="helpdesk_stock.menu_helpdesk_data"
+        sequence="60"
+    />
 
-    <menuitem id="menu_helpdesk_equipment"
-              name="Equipment"
-              action="fieldservice.action_fsm_equipment"
-              parent="helpdesk_stock.menu_helpdesk_data"
-              sequence="70"/>
+    <menuitem
+        id="menu_helpdesk_equipment"
+        name="Equipment"
+        action="fieldservice.action_fsm_equipment"
+        parent="helpdesk_stock.menu_helpdesk_data"
+        sequence="70"
+    />
 
-    <menuitem id="menu_helpdesk_contacts"
-              name="Contacts"
-              action="contacts.action_contacts"
-              parent="helpdesk_stock.menu_helpdesk_data"
-              sequence="80"/>
+    <menuitem
+        id="menu_helpdesk_contacts"
+        name="Contacts"
+        action="contacts.action_contacts"
+        parent="helpdesk_stock.menu_helpdesk_data"
+        sequence="80"
+    />
 
 </odoo>
