[14.0][MIG]fieldservice_helpdesk_stock: migrated into v14

--- a/fieldservice_helpdesk_stock/views/stock_request.xml
+++ b/fieldservice_helpdesk_stock/views/stock_request.xml
@@ -9,6 +9,7 @@
         <field name="arch" type="xml">
             <field name="fsm_order_id" position="after">
                 <field name="fsm_location_id" />
+                <field name="helpdesk_ticket_id" />
             </field>
         </field>
     </record>
