--- a/fieldservice_helpdesk_stock/views/helpdesk_views.xml
+++ b/fieldservice_helpdesk_stock/views/helpdesk_views.xml
@@ -1,27 +1,13 @@
 <odoo>
 
-    <!-- Copyright (C) 2019 - TODAY, Open Source Integrators
+    <!-- Copyright (C) 2021 - TODAY, Open Source Integrators
     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
-
-    <record id="helpdesk_ticket_form" model="ir.ui.view">
-        <field name="name">helpdesk.ticket.form</field>
-        <field name="model">helpdesk.ticket</field>
-        <field
-            name="inherit_id"
-            ref="helpdesk_stock.view_helpdesk_ticket_form_inherit_stock"
-        />
-        <field name="arch" type="xml">
-            <field name="inventory_location_id" position="attributes">
-                <attribute name="readonly">True</attribute>
-            </field>
-        </field>
-    </record>
 
     <menuitem
         id="menu_helpdesk_location"
         name="Locations"
         action="fieldservice.action_fsm_location"
-        parent="helpdesk_stock.menu_helpdesk_data"
+        parent="helpdesk.helpdesk_menu_config"
         sequence="60"
     />
 
@@ -29,7 +15,7 @@
         id="menu_helpdesk_equipment"
         name="Equipment"
         action="fieldservice.action_fsm_equipment"
-        parent="helpdesk_stock.menu_helpdesk_data"
+        parent="helpdesk.helpdesk_menu_config"
         sequence="70"
     />
 
@@ -37,7 +23,7 @@
         id="menu_helpdesk_contacts"
         name="Contacts"
         action="contacts.action_contacts"
-        parent="helpdesk_stock.menu_helpdesk_data"
+        parent="helpdesk.helpdesk_menu_config"
         sequence="80"
     />
 
