--- a/helpdesk_timesheet_fieldservice/views/helpdesk_ticket.xml
+++ b/helpdesk_timesheet_fieldservice/views/helpdesk_ticket.xml
@@ -6,11 +6,18 @@
     <record id="helpdesk_ticket_view_fieldservice_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.fieldservice.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id"
-               ref="helpdesk_fieldservice.helpdesk_ticket_view_service_request_form"/>
+        <field
+            name="inherit_id"
+            ref="helpdesk_fieldservice.helpdesk_ticket_view_service_request_form"
+        />
         <field name="arch" type="xml">
-            <xpath expr="//notebook/page/field[@name='description']" position="attributes">
-                <attribute name="placeholder">Description of the ticket...</attribute>
+            <xpath
+                expr="//notebook/page/field[@name='description']"
+                position="attributes"
+            >
+                <attribute
+                    name="placeholder"
+                >Description of the ticket...</attribute>
             </xpath>
         </field>
     </record>
@@ -19,22 +26,52 @@
     <record id="helpdesk_ticket_view_timesheet_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.fieldservice.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id"
-               ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
+        <field
+            name="inherit_id"
+            ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"
+        />
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Service Orders">
-                    <button name="action_create_order" string="Create FSM Order" type="object" class="oe_highlight"/>
+                    <button
+                        name="action_create_order"
+                        string="Create FSM Order"
+                        type="object"
+                        class="oe_highlight"
+                    />
                     <field name="fsm_order_ids">
                         <tree create="false">
-                            <field name="name" style="pointer-events:none;"/>
-                            <field name="location_id" style="pointer-events:none;"/>
-                            <button name="action_view_order" string="View FSM Order" type="object" class="helpdesk_column"/>
-                            <field name="stage_id" style="pointer-events:none;"/>
-                            <field name="person_id" style="pointer-events:none;"/>
-                            <field name="scheduled_date_start" style="pointer-events:none;"/>
-                            <field name="scheduled_date_end" style="pointer-events:none;"/>
-                            <field name="scheduled_duration" style="pointer-events:none;"/>
+                            <field name="name" style="pointer-events:none;" />
+                            <field
+                                name="location_id"
+                                style="pointer-events:none;"
+                            />
+                            <button
+                                name="action_view_order"
+                                string="View FSM Order"
+                                type="object"
+                                class="helpdesk_column"
+                            />
+                            <field
+                                name="stage_id"
+                                style="pointer-events:none;"
+                            />
+                            <field
+                                name="person_id"
+                                style="pointer-events:none;"
+                            />
+                            <field
+                                name="scheduled_date_start"
+                                style="pointer-events:none;"
+                            />
+                            <field
+                                name="scheduled_date_end"
+                                style="pointer-events:none;"
+                            />
+                            <field
+                                name="scheduled_duration"
+                                style="pointer-events:none;"
+                            />
                         </tree>
                     </field>
                 </page>
