--- a/helpdesk_scope/views/helpdesk_scope.xml
+++ b/helpdesk_scope/views/helpdesk_scope.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <!-- Sequences-->
     <record id="helpdesk_scope_seq" model="ir.sequence">
@@ -14,11 +14,11 @@
         <field name="model">helpdesk.scope</field>
         <field name="arch" type="xml">
             <tree editable="top" string="Helpdesk Scopes">
-                <field name="sequence" widget="handle"/>
-                <field name="name"/>
-                <field name="description"/>
-                <field name="team_ids" widget="many2many_tags"/>
-                <field name="active"/>
+                <field name="sequence" widget="handle" />
+                <field name="name" />
+                <field name="description" />
+                <field name="team_ids" widget="many2many_tags" />
+                <field name="active" />
             </tree>
         </field>
     </record>
@@ -29,11 +29,11 @@
         <field name="arch" type="xml">
              <form string="Helpdesk Scopes">
                  <group col="4">
-                    <field name="name"/>
-                    <field name="team_ids" widget="many2many_tags"/>
+                    <field name="name" />
+                    <field name="team_ids" widget="many2many_tags" />
                 </group>
                 <group>
-                    <field name="description"/>
+                    <field name="description" />
                 </group>
             </form>
         </field>
@@ -42,8 +42,7 @@
     <record id="action_helpdesk_scope" model="ir.actions.act_window">
         <field name="name">Helpdesk Scopes</field>
         <field name="res_model">helpdesk.scope</field>
-        <field name="view_id" ref="helpdesk_scope_tree_view"/>
-        <field name="view_type">form</field>
+        <field name="view_id" ref="helpdesk_scope_tree_view" />
         <field name="view_mode">tree</field>
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
@@ -55,10 +54,12 @@
         </field>
     </record>
 
-    <menuitem id="menu_ticket_scope"
-              name="Ticket Scopes"
-              action="action_helpdesk_scope"
-              parent="helpdesk.helpdesk_menu_config"
-              sequence="1"/>
+    <menuitem
+        id="menu_ticket_scope"
+        name="Ticket Scopes"
+        action="action_helpdesk_scope"
+        parent="helpdesk.helpdesk_menu_config"
+        sequence="1"
+    />
 
 </odoo>
