--- a/helpdesk_scope/views/helpdesk_ticket_type.xml
+++ b/helpdesk_scope/views/helpdesk_ticket_type.xml
@@ -1,14 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
     <!-- Helpdesk Ticket Type Tree Extension-->
     <record id="helpdesk_ticket_type_tree_extension_scope" model="ir.ui.view">
         <field name="name">helpdesk.ticket.type.tree.scope</field>
         <field name="model">helpdesk.ticket.type</field>
-        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_type_view_tree"/>
+        <field
+            name="inherit_id"
+            ref="helpdesk.helpdesk_ticket_type_view_tree"
+        />
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="scope_ids" widget="many2many_tags"/>
+                <field name="scope_ids" widget="many2many_tags" />
             </field>
         </field>
     </record>
