--- a/fieldservice_googlemaps_address_autocompletion/views/res_partner.xml
+++ b/fieldservice_googlemaps_address_autocompletion/views/res_partner.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
     <record id="fsm_partner_fields" model="ir.ui.view">
         <field name="name">res.partner.fsm.form</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
             <field name="name" position='attributes'>
                 <attribute name='widget'>gplaces_autocomplete</attribute>
@@ -12,9 +12,10 @@
                     {'lat':'partner_latitude','lng':'partner_longitude'}
                 </attribute>
             </field>
-            <field name="street"
-                   position='attributes'>
-                <attribute name='widget'>gplaces_address_autocomplete</attribute>
+            <field name="street" position='attributes'>
+                <attribute
+                    name='widget'
+                >gplaces_address_autocomplete</attribute>
                 <attribute name='options'>
                     {'lat':'partner_latitude','lng':'partner_longitude'}
                 </attribute>
