--- a/helpdesk_fieldservice/wizard/fsm_order_close_wizard.xml
+++ b/helpdesk_fieldservice/wizard/fsm_order_close_wizard.xml
@@ -1,4 +1,5 @@
 <!-- Copyright (C) 2021 Pavlov Media
+     Copyright (C) 2021 - TODAY, Open Source Integrators
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
     <record id="fsm_order_close_wizard_view_form" model="ir.ui.view">
