--- a/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fieldservice/views/helpdesk_ticket_views.xml
@@ -1,4 +1,5 @@
 <!-- Copyright 2021 Open Source Integrators
+     Copyright (C) 2021 Pavlov Media
      License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 <odoo>
     <template
