--- a/helpdesk_ticket_to_task/views/project_task_views.xml
+++ b/helpdesk_ticket_to_task/views/project_task_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <odoo>
 <!-- Copyright 2019 Open Source Integrators
      License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
@@ -7,14 +7,17 @@
     <record id="view_project_tasks_ticket_form" model="ir.ui.view">
         <field name="name">project.task</field>
         <field name="model">project.task</field>
-        <field name="inherit_id" ref="project.view_task_form2"/>
+        <field name="inherit_id" ref="project.view_task_form2" />
         <field name="arch" type="xml">
             <page position="after">
                 <page string="Tickets">
                     <field name="project_task_ticket_line">
                         <tree editable="bottom">
-                            <field name="ticket_id" context="{'default_project_id': parent.project_id}"/>
-                            <field name="user_id" readonly="1"/>
+                            <field
+                                name="ticket_id"
+                                context="{'default_project_id': parent.project_id}"
+                            />
+                            <field name="user_id" readonly="1" />
                         </tree>
                     </field>
                 </page>
