--- a/agreement_rma/views/agreement_view.xml
+++ b/agreement_rma/views/agreement_view.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    <record id="action_rma_order_line_agreement_specific"
-            model="ir.actions.act_window">
+    <record
+        id="action_rma_order_line_agreement_specific"
+        model="ir.actions.act_window"
+    >
         <field name="name">RMA Order Lines</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">rma.order.line</field>
-        <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('agreement_id', '=', active_id)]</field>
         <field name="context">{'create': False, 'edit': False}</field>
@@ -20,17 +21,25 @@
     <record id="partner_agreement_form_view_rma" model="ir.ui.view">
         <field name="name">agreement.form.rma</field>
         <field name="model">agreement</field>
-        <field name="inherit_id"
-               ref="agreement_legal.partner_agreement_form_view"/>
+        <field
+            name="inherit_id"
+            ref="agreement_legal.partner_agreement_form_view"
+        />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
-                <button name="%(action_rma_order_line_agreement_specific)d"
-                        type="action"
-                        class="oe_stat_button" icon="fa-link">
+                <button
+                    name="%(action_rma_order_line_agreement_specific)d"
+                    type="action"
+                    class="oe_stat_button"
+                    icon="fa-link"
+                >
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_value">
-                            <field name="rma_count" widget="statinfo"
-                                   nolabel="1"/>
+                            <field
+                                name="rma_count"
+                                widget="statinfo"
+                                nolabel="1"
+                            />
                         </span>
                         <span class="o_stat_text">RMA Orders</span>
                     </div>
