--- a/helpdesk_delivery/views/helpdesk_ticket.xml
+++ b/helpdesk_delivery/views/helpdesk_ticket.xml
@@ -3,11 +3,13 @@
     <record id="helpdesk_ticket_form_delivery" model="ir.ui.view">
         <field name="name">helpdesk.ticket.form.stock</field>
         <field name="model">helpdesk.ticket</field>
-        <field name="inherit_id"
-               ref="osi_helpdesk_stock.view_helpdesk_ticket_form_inherit_stock"/>
+        <field
+            name="inherit_id"
+            ref="osi_helpdesk_stock.view_helpdesk_ticket_form_inherit_stock"
+        />
         <field name="arch" type="xml">
             <xpath expr="//group[@id='stock-right']" position="inside">
-                <field name="carrier_id"/>
+                <field name="carrier_id" />
             </xpath>
         </field>
     </record>
