--- a/osi_analytic_segments_expenses/views/hr_expense_views.xml
+++ b/osi_analytic_segments_expenses/views/hr_expense_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
     <!-- Copyright 2019 Open Source Integrators
@@ -8,12 +8,11 @@
         <field name="name">hr.expense.tree.segments</field>
         <field name="model">hr.expense</field>
         <field name="type">tree</field>
-        <field name="inherit_id" ref="hr_expense.view_expenses_tree"/>
+        <field name="inherit_id" ref="hr_expense.view_expenses_tree" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']"
-                   position='after'>
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+            <xpath expr="//field[@name='analytic_account_id']" position='after'>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
@@ -22,12 +21,11 @@
         <field name="name">hr.expense.form.segments</field>
         <field name="model">hr.expense</field>
         <field name="type">form</field>
-        <field name="inherit_id" ref="hr_expense.hr_expense_view_form"/>
+        <field name="inherit_id" ref="hr_expense.hr_expense_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='analytic_account_id']"
-                   position='after'>
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+            <xpath expr="//field[@name='analytic_account_id']" position='after'>
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
@@ -35,12 +33,14 @@
     <record id="view_hr_expense_sheet_form_segments" model="ir.ui.view">
         <field name="name">hr.expense.sheet.form</field>
         <field name="model">hr.expense.sheet</field>
-        <field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form"/>
+        <field name="inherit_id" ref="hr_expense.view_hr_expense_sheet_form" />
         <field name="arch" type="xml">
-            <xpath expr="//tree/field[@name='analytic_account_id']"
-                   position='after'>
-                <field name="analytic_segment_one_id"/>
-                <field name="analytic_segment_two_id"/>
+            <xpath
+                expr="//tree/field[@name='analytic_account_id']"
+                position='after'
+            >
+                <field name="analytic_segment_one_id" />
+                <field name="analytic_segment_two_id" />
             </xpath>
         </field>
     </record>
