--- a/osi_helpdesk_stock/views/menu.xml
+++ b/osi_helpdesk_stock/views/menu.xml
@@ -1,26 +1,34 @@
 <odoo>
 
-    <menuitem id="menu_helpdesk_data"
-              name="Master Data"
-              parent="helpdesk.menu_helpdesk_root"
-              sequence="15"/>
+    <menuitem
+        id="menu_helpdesk_data"
+        name="Master Data"
+        parent="helpdesk.menu_helpdesk_root"
+        sequence="15"
+    />
 
-    <menuitem id="menu_helpdesk_product"
-              name="Products"
-              action="stock.product_template_action_product"
-              parent="menu_helpdesk_data"
-              sequence="50"/>
+    <menuitem
+        id="menu_helpdesk_product"
+        name="Products"
+        action="stock.product_template_action_product"
+        parent="menu_helpdesk_data"
+        sequence="50"
+    />
 
-    <menuitem id="menu_helpdesk_reporting_inventory"
-              name="Inventory"
-              action="stock.action_view_quants"
-              parent="helpdesk.helpdesk_ticket_report_menu_main"
-              sequence="50"/>
+    <menuitem
+        id="menu_helpdesk_reporting_inventory"
+        name="Inventory"
+        action="stock.action_view_quants"
+        parent="helpdesk.helpdesk_ticket_report_menu_main"
+        sequence="50"
+    />
 
-    <menuitem id="menu_helpdesk_stock_request"
-              name="Stock Requests"
-              action="stock_request.action_stock_request_form"
-              parent="menu_helpdesk_data"
-              sequence="90"/>
+    <menuitem
+        id="menu_helpdesk_stock_request"
+        name="Stock Requests"
+        action="stock_request.action_stock_request_form"
+        parent="menu_helpdesk_data"
+        sequence="90"
+    />
 
 </odoo>
