[FIX] osi_partner_credit_limit

--- a/osi_partner_credit_limit/views/sale.xml
+++ b/osi_partner_credit_limit/views/sale.xml
@@ -1,18 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <record id="sale_order_credit_view" model="ir.ui.view">
         <field name="name">sale.order.credit.form.inherit</field>
         <field name="model">sale.order</field>
         <field name="type">form</field>
-        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
             <field name="client_order_ref" position="after">
-                <field name="sales_hold"/>
-                <field name="credit_hold"/>
-		        <field name="ship_hold" readonly="1"/>
-                <field name="credit_override"
-                       groups="osi_partner_credit_limit.group_credit_hold" />
+                <field name="sales_hold" />
+                <field name="credit_hold" />
+                <field name="ship_hold" readonly="1" />
+                <field
+                    name="credit_override"
+                    groups="osi_partner_credit_limit.group_credit_hold"
+                />
             </field>
         </field>
     </record>
@@ -20,14 +21,23 @@
     <record id="sale_order_credit_view_security" model="ir.ui.view">
         <field name="name">sale.order.credit.view.security</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="osi_partner_credit_limit.sale_order_credit_view"/>
-        <field name="groups_id" eval="[(6, 0, [ref('osi_partner_credit_limit.group_credit_hold') ])]"/>
+        <field
+            name="inherit_id"
+            ref="osi_partner_credit_limit.sale_order_credit_view"
+        />
+        <field
+            name="groups_id"
+            eval="[(6, 0, [ref('osi_partner_credit_limit.group_credit_hold') ])]"
+        />
         <field name="arch" type="xml">
-	    <field name='ship_hold' position="attributes">
-                <attribute name="attrs">{'readonly':[('state','not in',('draft','sent','sale'))]}</attribute>
-	    </field>
-	    <field name='credit_override' position="attributes">
-                <attribute name="attrs">{'readonly':[('state','in',('cancel','done'))]}</attribute>
+            <field name='ship_hold' position="attributes">
+                <attribute name="attrs">{'readonly': [
+                    ('state', 'not in', ('draft', 'sent', 'sale'))]}</attribute>
+            </field>
+            <field name='credit_override' position="attributes">
+                <attribute
+                    name="attrs"
+                >{'readonly': [('state', 'in', ('cancel', 'done'))]}</attribute>
             </field>
         </field>
     </record>
@@ -36,13 +46,13 @@
     <record id="view_quotation_tree_credit_hold" model="ir.ui.view">
         <field name="name">sale.order.credit.hold.tree</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_quotation_tree"/>
+        <field name="inherit_id" ref="sale.view_quotation_tree" />
         <field name="arch" type="xml">
             <field name="state" position="after">
-                <field name="sales_hold" string="Cust. Sales Hold"/>
-                <field name="credit_hold" string="Cust. Credit Hold"/>
-                <field name="ship_hold" string="Order Sales Hold"/>
-                <field name="credit_override" string="Hold Override"/>
+                <field name="sales_hold" string="Cust. Sales Hold" />
+                <field name="credit_hold" string="Cust. Credit Hold" />
+                <field name="ship_hold" string="Order Sales Hold" />
+                <field name="credit_override" string="Hold Override" />
             </field>
         </field>
     </record>
@@ -51,13 +61,14 @@
     <record id="view_order_tree_credit_hold" model="ir.ui.view">
         <field name="name">sale.order.credit.holdtree</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_tree"/>
+        <field name="inherit_id" ref="sale.view_order_tree" />
         <field name="arch" type="xml">
             <field name="state" position="after">
-                <field name="credit_hold" string="Cust. Credit Hold"/>
-                <field name="ship_hold" string="Order Ship Hold"/>
-                <field name="credit_override" string="Hold Override"/>
+                <field name="credit_hold" string="Cust. Credit Hold" />
+                <field name="ship_hold" string="Order Ship Hold" />
+                <field name="credit_override" string="Hold Override" />
             </field>
         </field>
     </record>
+
 </odoo>
