--- a/osi_helpdesk_stock/views/stock_request.xml
+++ b/osi_helpdesk_stock/views/stock_request.xml
@@ -1,6 +1,7 @@
 <odoo>
 
-    <record id="stock_request_helpdesk_ticket" model="ir.ui.view">
+    <!-- PVM: Field is already added in fieldservice_stock_request.stock_request_fsm_order_form -->
+    <!-- <record id="stock_request_helpdesk_ticket" model="ir.ui.view">
         <field name="model">stock.request</field>
         <field name="inherit_id" ref="stock_request.view_stock_request_form" />
         <field name="arch" type="xml">
@@ -8,7 +9,7 @@
                 <field name="helpdesk_ticket_id" />
             </field>
         </field>
-    </record>
+    </record> -->
 
     <record id="stock_request_helpdesk_ticket_search" model="ir.ui.view">
         <field name="model">stock.request</field>
