--- a/helpdesk_timesheet_fieldservice/views/helpdesk_ticket.xml
+++ b/helpdesk_timesheet_fieldservice/views/helpdesk_ticket.xml
@@ -6,19 +6,13 @@
     <record id="helpdesk_ticket_view_fieldservice_form" model="ir.ui.view">
         <field name="name">helpdesk.ticket.fieldservice.form</field>
         <field name="model">helpdesk.ticket</field>
-        <field
-            name="inherit_id"
-            ref="helpdesk_fieldservice.helpdesk_ticket_view_service_request_form"
-        />
+        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form" />
         <field name="arch" type="xml">
-            <xpath
-                expr="//notebook/page/field[@name='description']"
-                position="attributes"
-            >
-                <attribute
-                    name="placeholder"
-                >Description of the ticket...</attribute>
+            <xpath expr="//notebook" position="inside">
+                 <page name="helpdesk_service_order_page" position="move" />
             </xpath>
+            <notebook name="helpdesk_fieldservice_book" position="replace">
+            </notebook>
         </field>
     </record>
 
