--- a/osi_partner_credit_limit/views/res_partner.xml
+++ b/osi_partner_credit_limit/views/res_partner.xml
@@ -8,9 +8,7 @@
         <field name="inherit_id" ref="account.view_partner_property_form" />
         <field name="arch" type="xml">
             <group name="fiscal_information" position="before">
-                <group
-                    string="Credit Management"
-                >
+                <group string="Credit Management">
                     <field name="sales_hold" />
                     <field
                         name="credit_limit"
